--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/core": "^10.4.1",
+    "axios": "^1.5.1",
+    "element-plus": "^2.3.14",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
+    "qs": "^6.11.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
-    "vite": "^4.4.9"
+    "sass": "^1.68.0",
+    "vite": "^4.4.9",
+    "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
