--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.1",
     "element-plus": "^2.3.14",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
