--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "element-plus": "^2.3.14",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
