--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,6 @@ VITE_APP_ENV= 'development'
 
 VITE_APP_BASE_PORT = '8081'
 
-# VITE_APP_BASE_API= 'http://43.143.249.23:8080'
+VITE_APP_BASE_API= 'http://43.143.249.23:8080'
 
-VITE_APP_BASE_API= 'http://localhost:8080'
+# VITE_APP_BASE_API= 'http://localhost:8080'
