--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "flask-vue-starter",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "date": "20231110",
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "prebuild": "node vite.version.js",
+    "build": "npm run prebuild && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
+    "dotenv": "^16.3.1",
     "sass": "^1.68.0",
     "vite": "^4.4.9",
     "vite-plugin-vue-setup-extend": "^0.4.0"
