--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ VITE_APP_BASE_PORT = '8081'
 
 # VITE_APP_BASE_API= 'http://43.143.249.23:8080'
 
-VITE_APP_BASE_API= http://localhost:8080
+VITE_APP_BASE_API= http://127.0.0.1:8080
