--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
+    "autoprefixer": "^10.4.19",
     "dotenv": "^16.3.1",
+    "postcss": "^8.4.38",
     "sass": "^1.68.0",
+    "tailwindcss": "^3.4.3",
     "vite": "^4.4.9",
     "vite-plugin-vue-setup-extend": "^0.4.0"
   }
