--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,6 @@ VITE_APP_ENV= 'development'
 VITE_APP_BASE_PORT = '8081'
 
 # VITE_APP_BASE_API= 'http://43.143.249.23:8080'
+# VITE_APP_BASE_API= http://192.168.31.45:8080
 
-VITE_APP_BASE_API= http://127.0.0.1:8080
+VITE_APP_BASE_API= http://192.168.31.76:8080
